fix: label overlapping input

--- a/packages/shared/styles/components/atoms/SfInput.scss
+++ b/packages/shared/styles/components/atoms/SfInput.scss
@@ -92,7 +92,11 @@
     text-align: var(--input-text-align);
     outline: none;
 
-    &:focus {
+    &:focus,
+    &[type="date"],
+    &[type="time"],
+    &[type="image"],
+    &[type="file"] {
       & ~ * {
         --icon-color: var(--c-primary);
         --input-password-icon-background: var(--c-primary);
